# urbrs

./: .gitignore  Cargo.toml  Makefile.toml
common/: Cargo.toml
common/src/: lib.rs
resource/models/: jerma.blend  jerma.glb
resource/shader/: a.frag  a.vert
rsrc/: Cargo.toml
rsrc/src/: main.rs  model.rs
src/: main.rs
src/vulkan/: context.rs  device.rs  instance.rs  mod.rs  phys_device.rs  surface.rs  swapchain.rs
urbrs/: Cargo.toml
urbrs/src/: camera.rs  main.rs  renderer.rs  terrain.rs  window.rs
urbrs/src/renderer/: buffer.rs  mesh.rs
urbrs/src/vulkan/: buffer.rs  command.rs  context.rs  descriptor.rs  device.rs  instance.rs  mesh.rs  mod.rs  phys_device.rs  pipeline.rs  surface.rs  swapchain.rs  sync.rs  util.rs
xtask/src/: main.rs
