[package]
name = "urbrs"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30.5"
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
glam = { version = "0.30.0", features = ["bytemuck"] }
gpu-allocator = "0.27.0"
anyhow = "1.0.97"
bytemuck = "1.22.0"
common = { version = "0.1.0", path = "../common" }
rkyv = "0.8.12"
